[package]
name = "tzbot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.10.4"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["full"] }
tokio-cron-scheduler = "0.14"
uuid = { version = "^1", features = ["v4"] }
anyhow = "1.0"
