[package]
name = "tzbot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.10.4"
tokio = { version = "1.21.2", features = ["full"] }

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["builder", "http", "model", "rustls_backend"]
